--- a/app/src/main/res/layout/now_playing_fragment.xml
+++ b/app/src/main/res/layout/now_playing_fragment.xml
@@ -6,9 +6,9 @@
     android:layout_height="match_parent"
     tools:context="id.co.horveno.discovermovies.fragment.NowPlayingFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Now Playing"/>
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recyclerNowPlaying"/>
 
 </FrameLayout>
