--- a/app/src/main/res/layout/nowplaying_thumbnail.xml
+++ b/app/src/main/res/layout/nowplaying_thumbnail.xml
@@ -7,7 +7,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/thumbnail"
+        android:id="@+id/nowPlayingThumbnail"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"/>
 
