--- a/app/src/main/res/layout/upcoming_thumbnail.xml
+++ b/app/src/main/res/layout/upcoming_thumbnail.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<id.co.horveno.discovermovies.util.SquareLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-</LinearLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/upcomingThumbnail"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"/>
+
+</id.co.horveno.discovermovies.util.SquareLayout>
