--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#151C25</color>
+    <color name="colorPrimaryDark">#151C25</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="yellow">#F7C70C</color>
+    <color name="darker_blue">#252a32</color>
+    <color name="gray">#a7a7a7</color>
 </resources>
