--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -31,6 +31,7 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    app:layout_collapseMode="parallax"
                     android:scaleType="centerCrop"
                     android:src="@drawable/fantasticposter" />
 
