--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -17,7 +17,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/toolbar_layout"
+            android:id="@+id/toolbar_layout_detail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
@@ -33,7 +33,8 @@
                     android:layout_height="match_parent"
                     app:layout_collapseMode="parallax"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/fantasticposter" />
+                    android:id="@+id/header_thumbnail"
+                    tools:src="@drawable/fantasticposter" />
 
                 <View
                     android:layout_width="match_parent"
@@ -48,7 +49,7 @@
                     android:layout_alignParentLeft="true"
                     android:paddingRight="15dp"
                     android:paddingLeft="15dp"
-                    android:text="@string/dummy_title"
+                    tools:text="@string/dummy_title"
                     android:textColor="@android:color/white"
                     android:textSize="28sp" />
 
@@ -64,11 +65,10 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/bubble_background_yellow"
                         android:padding="10dp"
-                        android:text=" 2016 "
+                        tools:text=" 2016 "
                         android:layout_gravity="center"
                         android:id="@+id/release_year"
-                        android:textColor="@android:color/white"
-                        android:textStyle="bold" />
+                        android:textColor="@android:color/white" />
 
                     <RelativeLayout
                         android:layout_width="0dp"
@@ -114,7 +114,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="end|right"
-                        android:text="9,75"
+                        tools:text="9,75"
                         android:id="@+id/votes_average"
                         android:textColor="@android:color/white"
                         android:textSize="40sp" />
