Set Runtime movie

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -88,6 +88,7 @@
                             android:progressTint="@color/yellow"
                             android:isIndicator="true"
                             android:numStars="5"
+                            android:rating="5"
                             android:padding="2dp"
                             android:stepSize="0.1"
                             android:layout_above="@+id/votes_result"
