--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -34,7 +34,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="2h 13m"
+                    tools:text="2h 13m"
+                    android:id="@+id/runtime_text"
                     android:layout_marginLeft="5dp"
                     android:layout_gravity="center"
                     android:textColor="@android:color/white"/>
